# ALR-GUI

apps/: CMakeLists.txt
libs/Comms/: CMakeLists.txt
libs/Comms/include/: Esp_comms.h
libs/Comms/src/: Esp_comms.cpp
libs/Controller/: CMakeLists.txt
libs/Controller/include/: Game.h
libs/Controller/src/: Game.cpp
libs/UI/: CMakeLists.txt
libs/UI/include/: window.h
libs/UI/src/: window.cpp  window_purple.datcpp
